packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_preserve_filenames.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 2546
expression: output
---
==INPUT==


import { component$, useStore } from '@builder.io/qwik';

export const App = component$((props: Stuff) => {
    return (
        <Cmp>
            <p class="stuff" onClick$={() => console.log('warn')}>Hello Qwik</p>
        </Cmp>
    );
});

============================= test.tsx ==

import { componentQrl } from "@builder.io/qwik";
import { inlinedQrl } from "@builder.io/qwik";
import { _jsxQ } from "@builder.io/qwik";
import { _jsxC } from "@builder.io/qwik";
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl((props: Stuff)=>{
    return /*#__PURE__*/ _jsxC(Cmp, {
        children: /*#__PURE__*/ _jsxQ("p", null, {
            class: "stuff",
            onClick$: /*#__PURE__*/ inlinedQrl(()=>console.log('warn'), "App_component_Cmp_p_onClick_vuXzfUTkpto")
        }, "Hello Qwik", 3, null)
    }, 3, "u6_0");
}, "App_component_ckEPmXZlub0"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;AAGA,OAAO,MAAM,oBAAM,sCAAW,CAAC,OAAO;IAClC,qBACI,MAAC;kBACG,cAAA,MAAC;YAAE,OAAM;YAAQ,QAAQ,2BAAE,IAAM,QAAQ,GAAG,CAAC;WAAS;;AAGlE,iCAAG\"}")
== DIAGNOSTICS ==

[]
