packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_prod_node.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 1345
expression: output
---
==INPUT==


import { component$ } from '@builder.io/qwik';

export const Foo = component$(() => {
    return (
        <div>
            <div onClick$={() => console.log('first')}/>
            <div onClick$={() => console.log('second')}/>
            <div onClick$={() => console.log('third')}/>
        </div>
    );
});

============================= s_htdrsvublie.tsx (ENTRY POINT)==

import { qrl } from "@builder.io/qwik";
export const s_HTDRsvUbLiE = ()=>{
    return <div>

            <div onClick$={/*#__PURE__*/ qrl(()=>import("./s_9dcjc0ujddo"), "s_9DcJc0uJDDo")}/>

            <div onClick$={/*#__PURE__*/ qrl(()=>import("./s_rjqdy8i0mxc"), "s_RjQdy8I0MXc")}/>

            <div onClick$={/*#__PURE__*/ qrl(()=>import("./s_w9ptfrbvk1e"), "s_w9ptFRBVK1E")}/>

        </div>;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";6BAG8B;IAC1B,QACK,IAAI;;YACD,CAAC,IAAI,8EAAuC;;YAC5C,CAAC,IAAI,8EAAwC;;YAC7C,CAAC,IAAI,8EAAuC;;QAChD,EAAE;AAEV\"}")
/*
{
  "origin": "test.tsx",
  "name": "s_HTDRsvUbLiE",
  "entry": null,
  "displayName": "Foo_component",
  "hash": "HTDRsvUbLiE",
  "canonicalFilename": "s_htdrsvublie",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    80,
    310
  ]
}
*/
============================= s_9dcjc0ujddo.tsx (ENTRY POINT)==

export const s_9DcJc0uJDDo = ()=>console.log('first');


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"6BAM2B,IAAM,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "s_9DcJc0uJDDo",
  "entry": null,
  "displayName": "Foo_component_div_div_onClick",
  "hash": "9DcJc0uJDDo",
  "canonicalFilename": "s_9dcjc0ujddo",
  "extension": "tsx",
  "parent": "s_HTDRsvUbLiE",
  "ctxKind": "jSXProp",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    142,
    168
  ]
}
*/
============================= s_w9ptfrbvk1e.tsx (ENTRY POINT)==

export const s_w9ptFRBVK1E = ()=>console.log('third');


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"6BAQ2B,IAAM,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "s_w9ptFRBVK1E",
  "entry": null,
  "displayName": "Foo_component_div_div_onClick_2",
  "hash": "w9ptFRBVK1E",
  "canonicalFilename": "s_w9ptfrbvk1e",
  "extension": "tsx",
  "parent": "s_HTDRsvUbLiE",
  "ctxKind": "jSXProp",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    257,
    283
  ]
}
*/
============================= s_rjqdy8i0mxc.tsx (ENTRY POINT)==

export const s_RjQdy8I0MXc = ()=>console.log('second');


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"6BAO2B,IAAM,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "s_RjQdy8I0MXc",
  "entry": null,
  "displayName": "Foo_component_div_div_onClick_1",
  "hash": "RjQdy8I0MXc",
  "canonicalFilename": "s_rjqdy8i0mxc",
  "extension": "tsx",
  "parent": "s_HTDRsvUbLiE",
  "ctxKind": "jSXProp",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    199,
    226
  ]
}
*/
============================= test.tsx ==

import { componentQrl } from "@builder.io/qwik";
import { qrl } from "@builder.io/qwik";
export const Foo = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./s_htdrsvublie"), "s_HTDRsvUbLiE"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAGA,OAAO,MAAM,oBAAM,gFAQhB\"}")
== DIAGNOSTICS ==

[]
