packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_props_wrapping_children.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 621
expression: output
---
==INPUT==


import { $, component$, useSignal } from '@builder.io/qwik';
export const Works = component$(({fromProps}) => {
	let fromLocal = useSignal(0);
	return (
		<div>
			{fromLocal}
			{fromProps}
			{fromLocal + fromProps}
			{{props: fromProps}}
			{{local: fromLocal}}
			{{props: fromProps, local: fromLocal}}
		</div>
	);
});

============================= test.js ==

import { componentQrl } from "@builder.io/qwik";
import { _wrapProp } from "@builder.io/qwik";
import { _fnSignal } from "@builder.io/qwik";
import { _jsxQ } from "@builder.io/qwik";
import { inlinedQrl } from "@builder.io/qwik";
import { useSignal } from '@builder.io/qwik';
export const Works = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl((props)=>{
    let fromLocal = useSignal(0);
    return /*#__PURE__*/ _jsxQ("div", null, null, [
        fromLocal,
        _wrapProp(props, "fromProps"),
        _fnSignal((p0, p1)=>p0 + p1.fromProps, [
            fromLocal,
            props
        ], "p0+p1.fromProps"),
        _fnSignal((p0)=>({
                props: p0.fromProps
            }), [
            props
        ], "{props:p0.fromProps}"),
        {
            local: fromLocal
        },
        _fnSignal((p0, p1)=>({
                props: p1.fromProps,
                local: p0
            }), [
            fromLocal,
            props
        ], "{props:p1.fromProps,local:p0}")
    ], 1, "u6_0");
}, "Works_component_t45qL4vNGv0"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AACA,SAAwB,SAAS,QAAQ,mBAAmB;AAC5D,OAAO,MAAM,sBAAQ,sCAAW,SAAiB;IAChD,IAAI,YAAY,UAAU;IAC1B,qBACC,MAAC;QACC;;4BAEA,QAN8B;;;;wBAO9B,CAAA;gBAAC,KAAK,KAPwB;YAOb,CAAA;;;QACjB;YAAC,OAAO;QAAS;4BACjB,CAAA;gBAAC,KAAK,KATwB;gBASX,KAAK;YAAW,CAAA;;;;;AAGvC,mCAAG\"}")
== DIAGNOSTICS ==

[]
