packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_props_wrapping_children2.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 648
expression: output
---
==INPUT==


import { $, component$, useSignal } from '@builder.io/qwik';
export const Works = component$((props) => {
	let fromLocal = useSignal(0);
	return (
		<div>
		  before-
			{fromLocal}
			{props.fromProps}
			{fromLocal + props.fromProps}
			{{props: props.fromProps}}
			{{local: fromLocal}}
			{{props: props.fromProps, local: fromLocal}}
			-after
		</div>
	);
});

============================= test.js ==

import { componentQrl } from "@builder.io/qwik";
import { _wrapProp } from "@builder.io/qwik";
import { _fnSignal } from "@builder.io/qwik";
import { _jsxQ } from "@builder.io/qwik";
import { inlinedQrl } from "@builder.io/qwik";
import { useSignal } from '@builder.io/qwik';
export const Works = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl((props)=>{
    let fromLocal = useSignal(0);
    return /*#__PURE__*/ _jsxQ("div", null, null, [
        "before-",
        fromLocal,
        _wrapProp(props, "fromProps"),
        _fnSignal((p0, p1)=>p0 + p1.fromProps, [
            fromLocal,
            props
        ], "p0+p1.fromProps"),
        _fnSignal((p0)=>({
                props: p0.fromProps
            }), [
            props
        ], "{props:p0.fromProps}"),
        {
            local: fromLocal
        },
        _fnSignal((p0, p1)=>({
                props: p1.fromProps,
                local: p0
            }), [
            fromLocal,
            props
        ], "{props:p1.fromProps,local:p0}"),
        "-after"
    ], 1, "u6_0");
}, "Works_component_t45qL4vNGv0"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AACA,SAAwB,SAAS,QAAQ,mBAAmB;AAC5D,OAAO,MAAM,sBAAQ,sCAAW,CAAC,QAAU;IAC1C,IAAI,YAAY,UAAU;IAC1B,qBACC,MAAC;QAAI;QAEH;kBACA;4BACA,KAAY,GAAM,SAAS;;;;wBAC3B,CAAA;gBAAC,OAAO,GAAM,SAAS;YAAA,CAAA;;;QACvB;YAAC,OAAO;QAAS;4BACjB,CAAA;gBAAC,OAAO,GAAM,SAAS;gBAAE,KAAK;YAAW,CAAA;;;;QAAE;;AAI/C,mCAAG\"}")
== DIAGNOSTICS ==

[]
